Endringer etter kodegransk. virksomhetID -> virksomhetOrgnr, hentAktørID -> finnAktørID, noen endringer på null-checks, opprettSakForBruker/opprettSakForVirksomhet